[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
flate2 = "1.0.25"
nalgebra = "0.32.2"
ndarray = "0.15.4"
ndarray-stats = "0.5.1"
ndarray-linalg = "0.13.1"
ndarray-rand = "0.14.0"
lapack = "0.17.0"
lapack-src = "0.4.0"
plotters = "0.3.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
rayon = "1.7.0"
approx = "0.5.0"
warp = "0.3.4"
tokio = { version = "1", features = ["full"] }
